<resources>
    <string name="app_name">Груз по пути</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone">Телефон</string>
    <string name="e_mail">E-mail</string>
    <string name="driver_document_number">Водительское удостоверение №</string>
    <string name="datetime_end_subscription">Срок вашей подписки истекает через 30 дней</string>
    <string name="continue_subscribtion">Продлить подписку</string>
    <string name="my_deliveries">Мои доставки</string>
    <string name="self_data">Личные данные</string>
    <string name="self_data_personal">Личные данные</string>
    <string name="my_profile">Мой профиль</string>


    <string name="add_cargo_text">ДОБАВЬТЕ ГРУЗ С УКАЗАНИЕМ ВСЕХ ЕГО ОСНОВНЫХ ПАРАМЕТРОВ</string>
    <string name="button_add_cargo_text">Добавить груз</string>
    <string name="text_add_name_cargo">Введите название груза</string>
    <string name="hint_name_cargo">ТНП</string>
    <string name="text_address_from">Адрес, откуда следует забрать груз</string>
    <string name="hint_address_from">Москва, Ленинский пр-т, д. 5</string>
    <string name="text_address_to">Адрес, куда следует доставить груз</string>
    <string name="hint_address_to">Ставрополь, ул. Советская, д. 1</string>
    <string name="text_button_next_step">Следующий шаг</string>
    <string name="text_choose_date">Дата/даты отправления груза</string>
    <string name="text_add_weight">Введите вес</string>
    <string name="hint_weight">Вес груза</string>
    <string name="text_kilograms">кг.</string>
    <string name="text_tonne">т.</string>
    <string name="text_length">Длина в метрах</string>
    <string name="hint_length">3,5</string>
    <string name="text_width">Ширина в метрах</string>
    <string name="hint_width">2,5</string>
    <string name="text_height">Высота в метрах</string>
    <string name="hint_height">1,5</string>
    <string name="text_add_comment">+ ДОБАВИТЬ КОММЕНТАРИЙ</string>
    <string name="text_button_create_request">Создать заявку</string>
    <string name="text_great">Отлично!</string>
    <string name="text_success">Ваша заявка создана и находится в разделе отправления</string>
    <string name="text_can_edit">Вы можете ее редактировать</string>


    <string name="title_activity_registration">Регистрация</string>
    <string name="text_entrance">Вход</string>
    <string name="text_registration">Регистрация</string>
    <string name="Carrier">Перевозчик</string>
    <string name="Shipper">Отправитель</string>
    <string name="cost_delivery">Стоимость перевозки</string>
    <string name="cargo">Груз</string>
    <string name="additional_param_cargo">Дополнительные параметры груза</string>
    <string name="comments">Комментарии</string>
    <string name="incorrect_phone_number">Некорректный номер телефона</string>
    <string name="where_is_chat">Здесь будет чат с клиентом</string>
    <string name="template_email">igor@mail.com</string>
    <string name="template_phone">+7</string>
    <string name="email_is_incorrect">Неверный Email</string>
    <string name="history_deliveries">История доставок</string>
    <string name="notifications">Уведомления</string>
    <string name="send_email_us">Написать нам</string>
    <string name="invite_friends">Пригласить друзей</string>
    <string name="you_does_not_available_deliveries">У вас нет доступных доставок</string>
    <string name="favourites_request_is_missing">Избранных заявок пока нет</string>
    <string name="find_cargo">Найденные грузы</string>
    <string name="button_label_search_cargo">Найти груз</string>
    <string name="label_empty_home_carrier">НАШ СЕРВИС В СТАДИИ РАЗРАБОТКИ \n СКОРО НА ЭТОЙ СТРАНИЦЕ БУДУТ ДОСТУПНЫ ГРУЗЫ</string>
    <string name="label_more">ПОДРОБНЕЕ</string>
    <string name="text_from">Откуда</string>
    <string name="hint_edit_text_from">Москва</string>
    <string name="text_radius">Радиус, км.</string>
    <string name="hint_edit_text_radius">200</string>
    <string name="text_to">Куда</string>
    <string name="hint_edit_text_to">Ставрополь</string>
    <string name="text_date_upload">Дата/даты загрузки</string>
    <string name="hint_date">25.10.2021</string>
    <string name="text_switch_off">кг.</string>
    <string name="text_switch_on">т.</string>
    <string name="text_volume">Объем в м3</string>
    <string name="text_length_red">Длина в м</string>
    <string name="text_width_red">Ширина в м</string>
    <string name="text_height_red">Высота в м</string>
    <string name="hint_up_to_10">до 10</string>
    <string name="hint_up_to_3">до 3</string>
    <string name="hint_up_to_2">до 2</string>
    <string name="text_button_find_cargo">Найти груз</string>
    <string name="text_sort_button">По уменьшению стоимости</string>
    <string name="text_button_filters">Фильтры</string>
    <string name="text_label_find_cargo">Найдено грузов: %d</string>
    <string name="for_date_search">%1$d.%2$d.%3$d</string>
    <string name="search_cargo">Поиск грузов</string>
    <string name="label_order_step_one">Заявка Шаг1</string>
    <string name="label_order_step_two">Заявка Шаг2</string>
    <string name="label_sort_decrease">По уменьшению стоимости</string>
    <string name="label_sort_increase">По увеличению стоимости</string>
    <string name="label_sort_update">По обновлению</string>
    <string name="label_sort_date">По дате</string>
    <string name="privacy_policy">Высылая код вы принимаете условия пользовательского соглашения и политику конфиденциальности</string>
    <string name="send_sms_with_code">Выслать SMS с кодом</string>
    <string name="no_account">Нет аккаунта?</string>
    <string name="register_now">Зарегистрироваться</string>
    <string name="fio">ФИО</string>
    <string name="select_profile">Выберите профиль</string>
    <string name="hint_fio">Иванов Иван Иванович</string>
    <string name="activity_profile">Профиль деятельности</string>
    <string name="hint_phone">+7</string>
    <string name="drivers_license">Водительское удостоверение №</string>
    <string name="hint_documents">№</string>
    <string name="text_complete_registration">Вы зарегистрированы! \n Для вас будет действовать \n бесплатный период</string>
    <string name="text_free_period">1 месяц</string>
    <string name="text_kod_sms">Ввести код из sms</string>
    <string name="send_again">прислать ещё раз</string>
    <string name="text_welcome">Перевозка грузов по самым низким ценам</string>
    <string name="login">Войти</string>
    <string name="cargo_is_added_into_cart">Данный груз добавлен в избранное</string>
    <string name="label_cost_text">Стоимость отправления груза в рублях</string>
    <string name="hint_add_cost">Введите сумму</string>
    <string name="my_packages">Мои отправления</string>
    <string name="history_packages">История отправлений</string>
    <string name="you_denied_call_from_app">Вы запретили звонки из приложения!</string>
    <string name="favourites">Избранное</string>
    <string name="for_date">%1$s - %2$s</string>
    <string name="label_home_carrier_fragment">Грузы</string>
    <string name="action_bell">Уведомления</string>
    <string name="action_share">Поделиться</string>
    <string name="phone_format">Телефон (+7)</string>
    <string name="check_correct_input_param">Проверьте корректность ввода данных</string>
    <string name="incorrect_number">Некорректные цифры</string>
    <string name="main_page">Главная</string>
    <string name="search_page">Поиск</string>
    <string name="deliveries_page">Доставки</string>
    <string name="favourites_page">Избранное</string>
    <string name="profile_page">Профиль</string>
    <string name="packages">Отправления</string>
    <string name="phone_is_incorrect">Неверный номер телефона</string>
    <string name="select_address_departure">Выберите адрес отправки</string>
    <string name="select_geopositions">Выберите местоположение</string>
    <string name="select_action_str">Выбрать</string>
    <string name="exit_account">Выйти из аккаунта</string>
    <string name="take_cargo">Взять груз</string>
    <string name="text_edit_cargo">Редактировать</string>
    <string name="height">Высота</string>
    <string name="width">Ширина</string>
    <string name="length">Длина</string>
    <string name="continue_str">Продолжить</string>
    <string name="placeholder_sms_code">******</string>
    <string name="advanced_search">РАСШИРЕННЫЙ ПОИСК</string>
    <string name="user_not_found">Пользователь с данным номером не найден</string>
    <string name="confirm_str">Подтверждение</string>
    <string name="str_state_not_confirm">Не подтверждено</string>
    <string name="cancel_cargo">Отказаться</string>
    <string name="search_other_cargo">Найдите другой груз...</string>
    <string name="your_request_delivery_reject">Ваша заявка на перевозку отклонена</string>
    <string name="delivery_status_updated">Обновлен статус заявки</string>
    <string name="your_denied_location">Вы запретили доступ к геолокации</string>
    <string name="open_profile_carrier">Посмотреть профиль перевозчика</string>
    <string name="not_found">Пока не найден</string>
    <string name="wait_delivery_cargo">Подтверждён. Ждите доставки груза</string>
    <string name="new_request">Новый запрос!</string>
    <string name="booking_is_rejected">Бронирование отменено!</string>
    <string name="reject_request">Отменить</string>
    <string name="application_completed">Заявка выполнена</string>
</resources>