<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/main_action"
        android:title="@string/main_page"
        android:icon="@drawable/menu_main_drawable"/>

    <item
        android:id="@+id/search_action"
        android:title="@string/search_page"
        android:icon="@drawable/menu_search_drawable"/>

    <item
        android:id="@+id/delivery_action"
        android:title="@string/deliveries_page"
        android:icon="@drawable/menu_delivery_drawable"/>

    <item
        android:id="@+id/favorite_action"
        android:title="@string/favourites_page"
        android:icon="@drawable/menu_favorite_drawable"/>
    <item
        android:id="@+id/profile_action"
        android:title="@string/profile_page"
        android:icon="@drawable/menu_profile_drawable"/>

</menu>