<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_view_add_name"
        style="@style/StandartText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/m_margin"
        android:layout_marginTop="@dimen/m_margin"
        android:text="@string/text_add_name_cargo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfield_name"
        style="@style/MyOutlinedBoxStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/text_view_add_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name_cargo"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_view_add_from"
        style="@style/StandartText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/m_margin"
        android:layout_marginTop="@dimen/m_margin"
        android:text="@string/text_address_from"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textfield_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfield_from"
        style="@style/MyOutlinedBoxStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/text_view_add_from">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_address_from"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_view_add_to"
        style="@style/StandartText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/m_margin"
        android:layout_marginTop="@dimen/m_margin"
        android:text="@string/text_address_to"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textfield_from" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfield_to"
        style="@style/MyOutlinedBoxStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/text_view_add_to">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_address_to"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_next_step"
        style="@style/MyStyleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/text_button_next_step"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>